[package]
name = "message_delete_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"]}
serde_json = "1.0"
serde = "1.0"